--- a/frontend/index.html
+++ b/frontend/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="frontend\public\favicon.ico" />
+    <link rel="icon" type="image/svg+xml" href="https://drive.google.com/file/d/1gm6RXMP87wRtLjwFnGsR-Wj6VwY84GXg/view?usp=drive_link" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
